// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen persons config import-export] should create the persons: the persons have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ person [Environment/cfgObjectTest]
Completed. 1 object created. 0 object updated. 0 object skipped.
",
}
`;

exports[`[mutagen persons config import-export] should skip the same persons: the persons have not been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ person [Environment/cfgObjectTest]
Completed. 0 object created. 1 object updated. 0 object skipped.
",
}
`;

exports[`[mutagen persons config import-export] should throw exception when new persons to import miss mandatory properties persons: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Missing properties:
  - person [Environment/emptyCfgObjectTest]:
    - userName
",
  "stdout": "",
}
`;

exports[`[mutagen persons config import-export] should update the modified persons: the modified persons have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ person [Environment/cfgObjectTest]
Completed. 0 object created. 1 object updated. 0 object skipped.
",
}
`;
